--- a/index.html
+++ b/index.html
@@ -1479,14 +1479,14 @@
         .kk {
 
             width: 243px;
-            height: 225px;
+            height: auto;
             line-height: 16px;
             justify-content: center;
         }
 
         .kk img {
             width: 243px;
-            height: 210px;
+            height: 180px;
             cursor: pointer;
         }
 
@@ -1496,14 +1496,14 @@
 
         .kk1 {
             width: 243px;
-            height: 225px;
+            height: auto;
             line-height: 16px;
             justify-content: center;
         }
 
         .kk1 img {
             width: 243px;
-            height: 210px;
+            height: 160px;
             cursor: pointer;
         }
 
@@ -3498,22 +3498,22 @@ function showSlides(n) {
                     <div class="k3-container">
 
                         <div class="kk">
-                            <figure>
                                 <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Red Flower">
-                                <figcaption
-                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
-                                    Supporting courses at Tiki N'Yiki</figcaption>
+                                <figure>
+                                <figcaption style="font-family: 'arial'; font-size: 13px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
+                                    Supporting courses at Tiki N'Yiki
+                                </figcaption>
                             </figure>
                         </div>
 
                         <div class="kk1">
+                            <img src="https://zupimages.net/up/22/31/z42x.jpg" alt="Celebrating Christmas in Burkina Faso">
                             <figure>
                                 <figcaption
-                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(81, 60, 177, 0.937);">
-                                    Celebrating Christmas in Burkina Faso</figcaption>
-                                    <img src="https://zupimages.net/up/22/31/z42x.jpg"
-                                    alt="Celebrating Christmas in Burkina Faso">
-                            </figure>
+                                    style="font-family: 'arial'; font-size: 13px; text-align: left; color: rgba(81, 60, 177, 0.937);">
+                                    Celebrating Christmas in Burkina Faso
+                                </figcaption>    
+                        </figure>
                         </div>
 
                     </div>
