--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         }
 
  .Photography-content {
+  height: 110px;
+  justify-content: center;
+  align-items: center;
   display: none;
   position: absolute;
   background: #f3f3f3;
@@ -206,6 +209,10 @@
         }
 
         .Sport-content {
+  width: 100px;
+  height: 153px;
+  justify-content: center;
+  align-items: center;
   display: none;
   position: absolute;
   background: #f3f3f3;
@@ -287,7 +294,10 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
-  width: 260px;
+  width: 240px;
+  height: 140px;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   }
 
@@ -360,6 +370,10 @@
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
+  width: 75px;
+  height: 58px;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
@@ -434,7 +448,10 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
-  width: 270px;
+  width: 75px;
+  height: 55px;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
@@ -503,6 +520,9 @@
 
         .Community-content {
   width: 260px;
+  height: 255px;
+  justify-content: center;
+  align-items: center;
   display: none;
   position: absolute;
   background: #f3f3f3;
@@ -583,6 +603,9 @@
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
   width: 265px;
+  height: 110px;
+  justify-content: center;
+  align-items: center;
   margin-left: 45px;
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
@@ -659,6 +682,9 @@
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
   width: 270px;
+  height: 153px;
+  justify-content: center;
+  align-items: center;
   border-top: 0.1rem solid rgb(5, 5, 85);
   }
 
@@ -3119,7 +3145,7 @@ background: #717171;
             border: 0.5px solid rgba(206, 206, 206, 0.161)c;
             box-shadow: 0 2px 3px 1px rgba(152, 152, 152, 0.565);
             border-radius: 0.1rem;
-            margin-top: -19px;
+            margin-top: -20px;
         }
 
         .reader:hover{
