--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
   width: 240px;
-  height: 140px;
+  height: 155px;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -1309,7 +1309,7 @@
             background-color: #fdfdfde5;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 5%;
+            margin-top: 6%;
         }
 
         .Home-Photo {
@@ -3107,11 +3107,11 @@ background: #717171;
             justify-content: center;
             align-items: center;
             background: #fff!important;
-            color: #344589;
-            width: 150px;
+            color: #fb500cea;
+            width: 155px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 15px;
+            font-size: 16px;
             padding-top: 20px;
             padding-bottom: 5px;
             margin-top: 10px;
@@ -3121,7 +3121,7 @@ background: #717171;
         .datime:hover {
             background: rgb(7, 152, 7)!important;
             color: yellow;
-            font-size: 14px;
+            font-size: 15px;
             border: 0.1px solid #fff;
             transition: 0.28s linear;
         }
