--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
   background: #f3f3f3;
   padding: 1px;
   width: 75px;
-  height: 58px;
+  height: 55px;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -1052,7 +1052,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background-color: rgba(227, 227, 227, 0.986);
+            background-color: rgba(226, 226, 226, 0.993);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1063,7 +1063,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgba(227, 227, 227, 0.986);
+            background-color: rgba(226, 226, 226, 0.993);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -1075,7 +1075,7 @@
             flex-direction: column;
             width: 100%;
             height: 5835px;
-            background-color: rgba(233, 233, 233, 0.791);
+            background-color: rgba(218, 218, 218, 0.791);
             justify-content: center;
             align-items: center;
         }
@@ -3107,7 +3107,7 @@ background: #717171;
             justify-content: center;
             align-items: center;
             background: #fff!important;
-            color: #fb500cea;
+            color: rgb(5, 5, 85);
             width: 155px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
@@ -3131,7 +3131,7 @@ background: #717171;
             position: relative;
             top: 25px;
             background-color: #fffffff9;
-            color: rgba(0, 138, 236, 0.954);
+            color: rgba(9, 106, 197, 0.949);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
