--- a/index.html
+++ b/index.html
@@ -4501,7 +4501,7 @@ function showSlides(n) {
         <br>
         DISABILITY IS NOT DESTINY
         <br>
-        Webmaster: GKC, Disability Rights Advocate
+        Webmaster: Gabriel Kouss COMP, Disability Rights Advocate
         <br>
     </div>
 </body>
