--- a/index.html
+++ b/index.html
@@ -3533,11 +3533,11 @@ function showSlides(n) {
                         </div>
 
                         <div class="kk1">
-                            <img src="https://zupimages.net/up/22/31/z42x.jpg" alt="Celebrating Christmas in Burkina Faso">
+                            <img src="https://zupimages.net/up/22/31/z42x.jpg" alt="Celebrating Christmas in Burk. Faso">
                             <figure>
                                 <figcaption
                                     style="font-family: 'arial'; font-size: 13px; text-align: left; color: rgba(81, 60, 177, 0.937);">
-                                    Celebrating Christmas in Burkina Faso
+                                    Celebrating Christmas in Burk. Faso
                                 </figcaption>    
                         </figure>
                         </div>
@@ -4501,7 +4501,7 @@ function showSlides(n) {
         <br>
         DISABILITY IS NOT DESTINY
         <br>
-        Webmaster: Gabriel Kouss COMP, Disability Rights Advocate
+        Webmaster: GKC, Disability Rights Advocate
         <br>
     </div>
 </body>
