--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background-color: rgba(227, 227, 227, 0.986);
+            background-color: rgb(218, 218, 218);
             width: 100%;
             height: 80px;
             justify-content: center;
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(6, 15, 63, 0.988);
+            background: rgba(6, 15, 63, 0.961);
             height: 60px;
             object-fit: cover;
             z-index: 1;
@@ -1052,7 +1052,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background-color: rgba(226, 226, 226, 0.993);
+            background-color: rgb(218, 218, 218);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1063,7 +1063,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgba(226, 226, 226, 0.993);
+            background-color: rgb(218, 218, 218);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -1576,7 +1576,6 @@
             padding-top: 20px;
             border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
-
         }
 
         .content1 a:hover {
