--- a/index.html
+++ b/index.html
@@ -3808,7 +3808,7 @@ function showSlides(n) {
 
                     <a href="#">
                 <div class="contentx1">
-                    <b>What You're Doing Will Stand As Your Own Experiences</b>
+                    <b>What You're Living And Doing Stand As Your Own Experiences</b>
                 </div>
             </a>
 
