--- a/index.html
+++ b/index.html
@@ -3806,13 +3806,13 @@ function showSlides(n) {
 
                 <div class="contentx0">
 
-                    <a href="#">
+                    <a href="https://medium.com/patsy-colegate/we-are-the-sum-of-experiences-that-we-encounter-as-we-go-through-life-2c54c8ac550" target="_blank">
                 <div class="contentx1">
                     <b>What You're Living And Doing Stand As Your Own Experiences</b>
                 </div>
             </a>
 
-            <a href="https://venturefizz.com/stories/boston/4-ways-accountability-plays-role-success-or-failure">
+            <a href="https://venturefizz.com/stories/boston/4-ways-accountability-plays-role-success-or-failure" target="_blank">
                 <div class="contentx2">
                     <b>The Way Of Your Success Or Failure Is Mostly Framed By Yourself</b>
                 </div>
@@ -3824,7 +3824,7 @@ function showSlides(n) {
 
             <div class="contenty">
 
-                <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">
+                <a href="https://www.ontb.bf/" target="_blank">
                     <div class="contentyy">
                         <div class="contentyy1">
                             <div class="content3y">
