--- a/index.html
+++ b/index.html
@@ -3452,7 +3452,7 @@ function showSlides(n) {
 
             <div class="Videos-content">
 
-                <a href="file:///C:/Users/User/Documents/Movies.html" target="blank">See More Videos</a>
+                <a href="https://www.fourwindfilms.com/frames" target="blank">Frames of reference</a>
 
         </div>
     </div>
