--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(6, 15, 63, 0.961);
+            background: rgba(7, 16, 68, 0.961);
             height: 60px;
             object-fit: cover;
             z-index: 1;
@@ -124,13 +124,13 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
  .Photography-content {
@@ -143,7 +143,7 @@
   color: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
 }
 
@@ -199,13 +199,13 @@
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Sport-content {
@@ -219,7 +219,7 @@
   color: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
 
@@ -276,13 +276,13 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Education-content {
@@ -293,7 +293,7 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   width: 240px;
   height: 155px;
   justify-content: center;
@@ -355,13 +355,13 @@
         }
 
         .navbar:hover .Videos:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Videos-content {
@@ -375,7 +375,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
@@ -432,13 +432,13 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Photos-content {
@@ -447,7 +447,7 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   width: 75px;
   height: 55px;
   justify-content: center;
@@ -509,13 +509,13 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Community-content {
@@ -528,7 +528,7 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
 
@@ -586,13 +586,13 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .TikiYiki-content {
@@ -601,7 +601,7 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   width: 265px;
   height: 110px;
   justify-content: center;
@@ -665,13 +665,13 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border: 0.1px solid rgb(255, 139, 16);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
-            color: rgb(0, 149, 255);
+            color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(8, 8, 114, 0.517);
+            background: rgba(9, 9, 126, 0.517);
         }
 
         .Disability-content {
@@ -680,7 +680,7 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   width: 270px;
   height: 153px;
   justify-content: center;
@@ -1063,7 +1063,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgb(218, 218, 218);
+            background-color: rgb(221, 221, 221);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -1321,8 +1321,9 @@
             width: 89.5%;
             height: 460px;
             overflow: hidden;
-            background-color: #ffffff71;
+            background-color: #ffffffc6;
             border: transparent;
+            margin-top: 1rem;
         }
         .Caption1{
             width: 100%;
@@ -1561,7 +1562,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 285px;
             font-family: 'georgia';
@@ -1627,7 +1628,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 297px;
             font-family: 'georgia';
@@ -1693,7 +1694,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 286px;
             font-family: 'georgia';
@@ -1759,7 +1760,7 @@
             justify-items: center;
             width: 84%;
             height: 290px;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             font-family: 'georgia';
             color: rgb(82, 82, 82);
             font-size: 22px;
@@ -1821,7 +1822,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 300px;
             font-family: 'georgia';
@@ -1885,7 +1886,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 298px;
             font-family: 'georgia';
@@ -1949,7 +1950,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 295px;
             font-family: 'georgia';
@@ -2013,7 +2014,7 @@
             row-gap: 5px;
             justify-content: center;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 250px;
             font-family: 'georgia';
@@ -2352,7 +2353,7 @@
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2402,7 +2403,7 @@
             column-gap: 65px;
             justify-content: space-between;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2520,7 +2521,7 @@
             column-gap: 2px;
             justify-content: center;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffffec;
             width: 84%;
             height: 410px;
             padding-top: 5px;
@@ -2536,7 +2537,7 @@
             height: 350px;
             justify-content: space-between;
             justify-items: center;
-            background: transparent;
+            background-color: #ffffffec;
             border-radius: 9px;
             padding: 10px;
             margin-top: 6px;
@@ -3579,7 +3580,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/20/8ul2.jpg" alt="Sunset in Burkina Faso" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
                                 Sunset In The Village Of Nagreongo [Burkina Faso]</figcation>
                         </figure>
                     </div>
@@ -3607,7 +3608,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
                                 Supporting Preschool Kids in Burkina Faso</figcation>
                         </figure>
                     </div>
@@ -3630,7 +3631,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="CHR Ziniare" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                  Regional Hospital Facility in Ziniare
                             </figcation>
                         </figure>
@@ -3658,7 +3659,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/46/v9wi.jpg" alt="Pasta" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 Food Security Is Not A Reality For Many People</figcation>
                         </figure>
                     </div>
@@ -3687,7 +3688,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://www.zupimages.net/up/22/30/01at.jpg" alt="" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 Global Warming is seriously a Global Threat</figcation>
                         </figure>
                     </div>
@@ -3717,7 +3718,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/09/0p1m.jpg" alt="Disability Is Not Destiny" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 Despite disabled, I managed To teach disabled kids</figcation>
                         </figure>
                     </div>
@@ -3745,7 +3746,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="A Mask during a Festima in dédougou-Burkina Faso" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 A Mask during Festima [A Festival of Masks-BF]</figcation>
                         </figure>
                     </div>
@@ -3830,7 +3831,7 @@ function showSlides(n) {
                             <div class="content3y">
                                 <figure>
                                     <figcation
-                                        style="font-family: arial; color: rgba(145, 145, 145, 0.961); font-size: 11px; text-align: left; margin-top: -5px;">
+                                        style="font-family: arial; color: rgb(40, 118, 174); font-size: 11px; text-align: left; margin-top: -5px;">
                                        Avenue d'Oubritenga - Ouagadougou-BFA</figcation>
                                     <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="A scene in Ouagadougou">
                                 </figure>
@@ -3845,7 +3846,7 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'georgia'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgba(70, 70, 70, 0.888);">
+                                <p style="font-family: 'arial'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgb(0, 45, 227);">
                                     Burkina Faso is a landlocked country located in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
