--- a/index.html
+++ b/index.html
@@ -2652,7 +2652,7 @@
     font-family: 'Titillium web' sans-serif;
     font-size: 23px;
     background-color: #fff;
-    color: rgba(109, 109, 109, 0.849);
+   color:rgb(0, 140, 255);
     margin-top: -10px;
 }
         .C2 {
