--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
             width: auto;
         }
 
-        .Photos {
+        .Contact {
             float: left;
             overflow: hidden;
         }
 
-        .Photos .dropbtn {
+        .Contact .dropbtn {
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 21px;
             color: #fff;
@@ -431,7 +431,7 @@
             border-bottom: 0.25rem solid transparent;
         }
 
-        .navbar:hover .Photos:hover .dropbtn {
+        .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
@@ -441,7 +441,7 @@
             background: rgba(9, 9, 126, 0.517);
         }
 
-        .Photos-content {
+        .Contact-content {
   display: none;
   position: absolute;
   background: #f3f3f3;
@@ -456,7 +456,7 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
 
-        .Photos-content a {
+        .Contact-content a {
             font-size: 17px;
             float: none;
             color: #06123f;
@@ -466,7 +466,7 @@
             text-align: left;
         }
 
-        .Photos-content a:hover {
+        .Contact-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -474,7 +474,7 @@
             line-height: 36px;
         }
 
-        .Photos:hover .Photos-content:hover a:hover{
+        .Contact:hover .Contact-content:hover a:hover{
             width: auto;
             height: 50px;
             text-align: center;
@@ -484,7 +484,7 @@
             transition: 0.25s ease;
         }
 
-        .Photos:hover .Photos-content {
+        .Contact:hover .Contact-content {
             display: grid;
             grid-template-columns: 1fr;
             justify-content: space-between;
@@ -3459,13 +3459,13 @@ function showSlides(n) {
     </div>
 
 
-        <div class="Photos">
-            <button class="dropbtn"><b>Photos</b>
+        <div class="Contact">
+            <button class="dropbtn"><b>Contact</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
-            <div class="Photos-content">
-                <a href="file:///C:/Users/User/Documents/Photo.html" target="blank">See More Photos</a>
+            <div class="Contact-content">
+                <a href="mailto:compaorebiga@gmail.com" target="blank">Contact</a>
             </div>
         </div>
 
