--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
    }
 
         .Contact-content a {
+            width: 73px;
             font-size: 17px;
             float: none;
             color: #06123f;
@@ -475,7 +476,7 @@
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: auto;
+            width: 72px;
             height: 50px;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
