--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             position: relative;
             flex-direction: column;
             width: 100%;
-            height: 5835px;
+            height: 6169px;
             background-color: rgba(218, 218, 218, 0.791);
             justify-content: center;
             align-items: center;
@@ -2168,6 +2168,42 @@
         .envel img {
             width: 270px;
             height: 83px;
+        }
+
+        .CANADA{
+            display: grid;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+            row-gap: 1rem;
+            column-gap: 2rem;
+            width: 84%;
+            height: 4.8%;
+            padding-top: 12px;
+            padding-bottom: 12px;
+            justify-content: center;
+            justify-items: center;
+            background: rgba(255, 82, 82, 0.357);
+        }
+
+        .NADA{
+            display: grid;
+            grid-template-columns: 1fr;
+            width: 170px;
+            height: 80px;
+            border: 0.2rem solid rgba(0, 0, 255, 0.766);
+            border-radius: 0.5rem;
+            justify-content: center;
+            justify-content: center;
+            padding: 20px; 
+            font-family: georgia;
+            font-size: 16px;
+            color:rgb(48, 52, 116);
+        }
+
+        .NADA:hover{
+            background: rgba(255, 69, 69, 0.583);
+            cursor: pointer;
+            color: #000;
         }
 
         .immi {
@@ -4005,8 +4041,78 @@ function showSlides(n) {
                         </div>
                     </a>
                 </div>
+            </div>
+
+            <div class="CANADA">
+
+                <a href="https://www2.gnb.ca/" target="_blank">
+                <div class="NADA">
+                New-Brunswick
+                </div>
+            </a>
+
+            <a href="https://www2.gov.bc.ca/gov/content/home" target="_blank">
+                <div class="NADA">
+                British Colombia
+                </div>
+            </a>
+
+            <a href="https://www.alberta.ca/" target="_blank"> 
+                <div class="NADA">
+                Alberta
+                </div>
+            </a>
+
+            <a href="https://www.gov.mb.ca/index.fr.html" target="_blank">
+                <div class="NADA">
+                Manitoba
+                </div>
+            </a>
+
+            <a href="https://www.saskatchewan.ca/" target="_blank">
+                <div class="NADA">
+                Saskatchewan
+                </div>
+            </a>
+
+            <a href="https://www.princeedwardisland.ca/en" target="_blank">
+                <div class="NADA">
+                PEI
+                </div>
+            </a>
+
+            <a href="https://www.gov.nl.ca/" target="_blank">
+                <div class="NADA">
+                New Foundland & Labrador
+                </div>
+            </a>
+
+            <a href="https://beta.novascotia.ca/" target="_blank">
+                <div class="NADA">
+                Nova Scotia
+                </div>
+            </a>
+
+            <a href="https://yukon.ca/" target="_blank">
+                <div class="NADA">
+                    Yukon
+                </div>
+            </a>
+
+            <a href="https://gov.nu.ca/" target="_blank">
+                <div class="NADA">
+                    Nunavit
+                </div>
+            </a>
+
+            <a href="https://www.gov.nt.ca/en" target="_blank">
+                <div class="NADA">
+                    Northwest Territory
+                </div>
+                </a>
 
             </div>
+
             <div class="content9">
 
                     <div class="immi">
