--- a/index.html
+++ b/index.html
@@ -2174,10 +2174,10 @@
             display: grid;
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-            row-gap: 1rem;
-            column-gap: 2rem;
+            row-gap: 1.25rem;
+            column-gap: 0.5rem;
             width: 84%;
-            height: 4.8%;
+            height: 5%;
             padding-top: 12px;
             padding-bottom: 12px;
             justify-content: center;
@@ -2188,16 +2188,16 @@
         .NADA{
             display: grid;
             grid-template-columns: 1fr;
-            width: 170px;
+            width: 175px;
             height: 80px;
             border: 0.2rem solid rgba(0, 0, 255, 0.766);
             border-radius: 0.5rem;
             justify-content: center;
-            justify-content: center;
+            justify-items: center;
             padding: 20px; 
             font-family: georgia;
             font-size: 16px;
-            color:rgb(48, 52, 116);
+            color:rgb(57, 63, 137);
         }
 
         .NADA:hover{
