--- a/index.html
+++ b/index.html
@@ -2174,7 +2174,7 @@
             display: grid;
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-            row-gap: 1.25rem;
+            row-gap: 1.25rem; 
             column-gap: 0.5rem;
             width: 84%;
             height: 5%;
@@ -4077,7 +4077,7 @@ function showSlides(n) {
 
             <a href="https://www.princeedwardisland.ca/en" target="_blank">
                 <div class="NADA">
-                PEI
+                Prince Edouard Island 
                 </div>
             </a>
 
