--- a/index.html
+++ b/index.html
@@ -2178,8 +2178,7 @@
             column-gap: 0.5rem;
             width: 84%;
             height: 5%;
-            padding-top: 12px;
-            padding-bottom: 12px;
+            padding: 20px;
             justify-content: center;
             justify-items: center;
             background: rgba(255, 82, 82, 0.357);
