--- a/index.html
+++ b/index.html
@@ -4607,7 +4607,7 @@ function showSlides(n) {
         <br>
         DISABILITY IS NOT DESTINY
         <br>
-        Webmaster: GKC, Disability Rights Advocate
+        Webmaster: Gabriel K.C, Disability Rights Activist
         <br>
     </div>
 </body>
