--- a/index.html
+++ b/index.html
@@ -3560,7 +3560,7 @@ function showSlides(n) {
                     <div class="k3-container">
 
                         <div class="kk">
-                                <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Red Flower">
+                                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Red Flower">
                                 <figure>
                                 <figcaption style="font-family: 'arial'; font-size: 13px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
                                     Supporting courses at Tiki N'Yiki
