--- a/index.html
+++ b/index.html
@@ -1507,14 +1507,14 @@
         .kk {
 
             width: 243px;
-            height: auto;
+            height:  auto;
             line-height: 16px;
             justify-content: center;
         }
 
         .kk img {
             width: 243px;
-            height: 180px;
+            height:auto;
             cursor: pointer;
         }
 
@@ -1524,14 +1524,14 @@
 
         .kk1 {
             width: 243px;
-            height: auto;
+            height: 150px;
             line-height: 16px;
             justify-content: center;
         }
 
         .kk1 img {
             width: 243px;
-            height: 160px;
+            height: auto;
             cursor: pointer;
         }
 
@@ -2181,28 +2181,33 @@
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: rgba(255, 82, 82, 0.357);
+            background: rgba(255, 97, 97, 0.414);
         }
 
         .NADA{
             display: grid;
             grid-template-columns: 1fr;
-            width: 175px;
-            height: 80px;
-            border: 0.19rem solid rgba(0, 68, 255, 0.766);
+            width: 185px;
+            height: 77px;
             border-radius: 0.5rem;
+            border: 0.12rem solid rgba(31, 38, 127, 0.791);
+            box-shadow: 2px 1.5px 0.5rem 2px rgba(26, 32, 122, 0.611);
             justify-content: center;
             justify-items: center;
-            padding: 20px; 
+            padding-top: 20px; 
+            padding-bottom: 20px;
             font-family: georgia;
-            font-size: 16px;
-            color:rgb(37, 44, 139);
+            font-size: 17px;
+            color:rgb(43, 48, 120);
         }
 
         .NADA:hover{
-            background: rgba(255, 69, 69, 0.583);
+            background:-webkit-linear-gradient(rgba(255, 35, 35, 0.822), rgba(255, 166, 166, 0.391));
             cursor: pointer;
+            box-shadow: 3px 4px 0.5rem 2px rgba(26, 32, 122, 0.611);
             color: #000;
+            transition: 0.15s linear;
+            font-size: 17.5px;
         }
 
         .immi {
@@ -3560,10 +3565,10 @@ function showSlides(n) {
                     <div class="k3-container">
 
                         <div class="kk">
-                                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Red Flower">
+                                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming">
                                 <figure>
                                 <figcaption style="font-family: 'arial'; font-size: 13px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
-                                    Supporting courses at Tiki N'Yiki
+                                    Drumming and Courses at Tiki N'Yiki
                                 </figcaption>
                             </figure>
                         </div>
@@ -4082,7 +4087,7 @@ function showSlides(n) {
 
             <a href="https://www.gov.nl.ca/" target="_blank">
                 <div class="NADA">
-                New Foundland & Labrador
+                NFL
                 </div>
             </a>
 
