--- a/index.html
+++ b/index.html
@@ -2187,11 +2187,11 @@
         .NADA{
             display: grid;
             grid-template-columns: 1fr;
-            width: 185px;
+            width: 190px;
             height: 77px;
             border-radius: 0.5rem;
-            border: 0.12rem solid rgba(31, 38, 127, 0.791);
-            box-shadow: 2px 1.5px 0.5rem 2px rgba(26, 32, 122, 0.611);
+            border: 0.12rem solid rgba(30, 37, 131, 0.635);
+            box-shadow: 2px 1px 0.45rem 2px rgba(24, 30, 113, 0.751);
             justify-content: center;
             justify-items: center;
             padding-top: 20px; 
@@ -2204,7 +2204,7 @@
         .NADA:hover{
             background:-webkit-linear-gradient(rgba(255, 35, 35, 0.822), rgba(255, 166, 166, 0.391));
             cursor: pointer;
-            box-shadow: 3px 4px 0.5rem 2px rgba(26, 32, 122, 0.611);
+            box-shadow: 0 3px 0.8rem 5px rgba(10, 14, 59, 0.913);
             color: #000;
             transition: 0.15s linear;
             font-size: 17.5px;
@@ -4087,7 +4087,7 @@ function showSlides(n) {
 
             <a href="https://www.gov.nl.ca/" target="_blank">
                 <div class="NADA">
-                NFL
+                Newfoundland
                 </div>
             </a>
 
@@ -4114,6 +4114,30 @@ function showSlides(n) {
                     Northwest Territory
                 </div>
                 </a>
+
+                <a href="https://www.thecanadianencyclopedia.ca/en/article/longest-rivers-in-canada" target="_blank">
+                    <div class="NADA">
+                        Canada main rivers
+                    </div>
+                    </a>
+
+                    <a href="https://www.thecanadianencyclopedia.ca/en/article/arctic-ocean-and-canada" target="_blank">
+                        <div class="NADA">
+                            Artic Ocean
+                        </div>
+                        </a>
+
+                        <a href="https://www.thecanadianencyclopedia.ca/en/article/atlantic-ocean-and-canada" target="_blank">
+                            <div class="NADA">
+                                Atlantic Ocean 
+                            </div>
+                            </a>
+
+                            <a href="https://www.thecanadianencyclopedia.ca/en/article/pacific-ocean-and-canada" target="_blank">
+                                <div class="NADA">
+                                    Pacific Ocean
+                                </div>
+                                </a>
 
             </div>
 
