--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             position: relative;
             flex-direction: column;
             width: 100%;
-            height: 6169px;
+            height: auto;
             background-color: rgba(218, 218, 218, 0.791);
             justify-content: center;
             align-items: center;
@@ -2177,11 +2177,12 @@
             row-gap: 1.25rem; 
             column-gap: 0.5rem;
             width: 84%;
-            height: 5%;
+            height: 340px;
             padding: 20px;
+            padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(255, 97, 97, 0.414);
+            background: rgba(253, 78, 78, 0.439);
         }
 
         .NADA{
@@ -3186,7 +3187,7 @@ background: #717171;
             border: 0.5px solid rgba(206, 206, 206, 0.161)c;
             box-shadow: 0 2px 3px 1px rgba(152, 152, 152, 0.565);
             border-radius: 0.1rem;
-            margin-top: -20px;
+            margin-top: 10px;
         }
 
         .reader:hover{
