--- a/index.html
+++ b/index.html
@@ -2182,10 +2182,11 @@
             padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(253, 78, 78, 0.439);
+            background: rgba(255, 102, 102, 0.439);
         }
 
         .NADA{
+            background: #fff;
             display: grid;
             grid-template-columns: 1fr;
             width: 190px;
